bugfix: darkmode text wrong color for cve-search

--- a/chat/src/root.css
+++ b/chat/src/root.css
@@ -11,3 +11,7 @@
 ::-webkit-scrollbar-track {
   border-radius: 1rem;
 }
+
+.dark mark > p {
+  color: white;
+}
